Fix: cron service name

--- a/ansible/playbooks/roles/mastodon/handlers/main.yml
+++ b/ansible/playbooks/roles/mastodon/handlers/main.yml
@@ -10,7 +10,7 @@
 - name: Restart cron
   when: ansible_virtualization_type != "docker"
   systemd:
-    name: cron
+    name: "{{ cron_service_name }}"
     state: restarted
   tags: mastodon
 
