Move cron task from mastodon role to cron role

--- a/ansible/playbooks/roles/cron/handlers/main.yml
+++ b/ansible/playbooks/roles/cron/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
-# handlers file for cron
+
+- name: Restart cron
+  when: ansible_virtualization_type != "docker"
+  systemd:
+    name: "{{ cron_service_name }}"
+    state: restarted
+  tags: cron
