--- a/ansible/playbooks/roles/cron/tasks/main.yml
+++ b/ansible/playbooks/roles/cron/tasks/main.yml
@@ -23,6 +23,8 @@
     name: RAILS_ENV
     env: yes
     value: production
+  become: yes
+  become_user: "{{ user_name }}"
   tags: cron
 
 - name: Add cron
@@ -31,6 +33,8 @@
     name: Remote media attachment cache cleanup
     special_time: daily
     job: "cd /home/mastodon/live && /home/mastodon/.rbenv/shims/bundle exec rake mastodon:media:remove_remote"
+  become: yes
+  become_user: "{{ user_name }}"
   notify:
     - Restart cron
   tags: cron
