--- a/ansible/playbooks/roles/mastodon/tasks/main.yml
+++ b/ansible/playbooks/roles/mastodon/tasks/main.yml
@@ -98,7 +98,7 @@
   tags: mastodon
 
 - name: Obtain SSL certificate
-  when: not is_test
+  when: not skip_letsencrypt and not is_test
   shell: "./certbot-auto certonly --non-interactive --agree-tos --webroot --domain {{ domain_name }} --email {{ email }} --webroot-path /home/{{ user_name }}/live/public/"
   args:
     chdir: "{{ letsencrypt_certbot_path }}"
@@ -106,6 +106,7 @@
   tags: mastodon
 
 - name: Remove comment out of mastodon.conf
+  when: not skip_letsencrypt
   replace:
     path: /etc/nginx/conf.d/mastodon.conf
     regexp: '^#(\s+)ssl_certificate(.*)$'
