--- a/ansible/playbooks/host_vars/test/_vars.yml
+++ b/ansible/playbooks/host_vars/test/_vars.yml
@@ -2,5 +2,6 @@
 domain_name: example.com
 email: admin@example.com
 is_test: true
+stage: local
 skip_letsencrypt: true
 postgresql_user_password: test_password
