--- a/ansible/playbooks/roles/mastodon/tasks/main.yml
+++ b/ansible/playbooks/roles/mastodon/tasks/main.yml
@@ -10,7 +10,7 @@
   tags: mastodon
 
 - name: Start redis
-  when: ansible_virtualization_type != "docker"
+  when: not is_docker
   systemd:
     name: redis
     enabled: yes
@@ -91,7 +91,7 @@
   tags: mastodon
 
 - name: Reload nginx
-  when: ansible_virtualization_type != "docker"
+  when: not is_docker
   systemd:
     name: nginx
     state: reloaded
@@ -116,7 +116,7 @@
   tags: mastodon
 
 - name: Add DB user
-  when: ansible_virtualization_type != "docker"
+  when: not is_docker
   postgresql_user:
     name: "{{ postgresql_user }}"
     password: "{{ postgresql_user_password | password_hash('sha512') }}"
@@ -141,7 +141,7 @@
   tags: mastodon
 
 - name: Set mastodon services enabled
-  when: ansible_virtualization_type != "docker"
+  when: not is_docker
   systemd:
     name: "{{ item }}"
     enabled: yes
