Improve readability of nginx role

--- a/ansible/playbooks/roles/nginx/tasks/debian.yml
+++ b/ansible/playbooks/roles/nginx/tasks/debian.yml
@@ -16,3 +16,15 @@
     name: nginx
     update_cache: yes
   tags: nginx
+
+- name: Include _remove_default.conf.yml
+  include_role:
+    name: nginx
+    tasks_from: _remove_default.conf
+  tags: nginx
+
+- name: Include _start.yml
+  include_role:
+    name: nginx
+    tasks_from: _start
+  tags: nginx
