--- a/ansible/playbooks/roles/git/tasks/main.yml
+++ b/ansible/playbooks/roles/git/tasks/main.yml
@@ -12,12 +12,12 @@
 - name: Download tarball
   get_url:
     url: "https://github.com/git/git/archive/v{{ git_version }}.tar.gz"
-    dest: "/var/tmp/git-{{ git_version }}.tar.gz"
+    dest: "{{ temp_directory }}/git-{{ git_version }}.tar.gz"
   tags: git
 
 - name: Unarchive
   unarchive:
-    src: "/var/tmp/git-{{ git_version }}.tar.gz"
+    src: "{{ temp_directory }}/git-{{ git_version }}.tar.gz"
     dest: "/opt"
     extra_opts:
       - "--no-same-owner"
