Split files for improve readability

--- a/ansible/playbooks/roles/common/tasks/centos.yml
+++ b/ansible/playbooks/roles/common/tasks/centos.yml
@@ -13,3 +13,10 @@
   loop_control:
     loop_var: common_install_package
   tags: common
+
+- name: Include _swap.yml when enable_swap is true
+  when: enable_swap
+  include_role:
+    name: common
+    tasks_from: _swap
+  tags: common
