Rename task's name

--- a/ansible/playbooks/roles/nginx/tasks/debian.yml
+++ b/ansible/playbooks/roles/nginx/tasks/debian.yml
@@ -17,13 +17,13 @@
     update_cache: yes
   tags: nginx
 
-- name: Include _remove_default.conf.yml
+- name: Include _remove_default.conf task
   include_role:
     name: nginx
     tasks_from: _remove_default.conf
   tags: nginx
 
-- name: Include _start.yml
+- name: Include _start task
   include_role:
     name: nginx
     tasks_from: _start
