--- a/ansible/playbooks/roles/common/defaults/main.yml
+++ b/ansible/playbooks/roles/common/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
 enable_swap: false
-is_docker: ansible_virtualization_type == "docker"
+is_docker: "{{ ansible_virtualization_type == 'docker' }}"
 swap_size: 1024
 temp_directory: /var/tmp/ansible
