--- a/ansible/playbooks/roles/mastodon/defaults/main.yml
+++ b/ansible/playbooks/roles/mastodon/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+mastodon_github_url: https://github.com/tootsuite/mastodon.git
+
 mastodon_path: "/home/{{ user_name }}/live"
 
 mastodon_version: v2.3.3
