Fix letsencrypt-renew script mode

--- a/ansible/playbooks/roles/cron/tasks/main.yml
+++ b/ansible/playbooks/roles/cron/tasks/main.yml
@@ -12,7 +12,7 @@
   template:
     src: letsencrypt-renew.j2
     dest: /etc/cron.daily/letsencrypt-renew
-    mode: u+x
+    mode: a+x
   notify:
     - Restart cron
   tags: cron
