Add inventory sample

--- a/ansible/inventories/hosts.yml
+++ b/ansible/inventories/hosts.yml
@@ -2,3 +2,9 @@ all:
   hosts:
     test:
       ansible_connection: local
+    # see also http://docs.ansible.com/ansible/latest/user_guide/intro_inventory.html
+    # HOST_NAME:
+    #   ansible_host: 192.168.99.10
+    #   ansible_port: 22
+    #   ansible_user: vagrant
+    #   ansible_ssh_private_key_file: ~/.ssh/xxxx
