--- a/ansible/playbooks/roles/common/defaults/main.yml
+++ b/ansible/playbooks/roles/common/defaults/main.yml
@@ -4,3 +4,4 @@ enable_swap: false
 is_docker: "{{ ansible_virtualization_type == 'docker' }}"
 swap_size: 1024
 temp_directory: /var/tmp/ansible
+stage: production
